<resources>
    <string name="app_name">Ai-TEC</string>
    <string name="call_activity_btn_capture">静止画撮影</string>
    <string name="call_activity_btn_capture_disable">撮影機能停止中</string>
    <string name="call_activity_header">メイン画面</string>
    <string name="call_activity_txt_noti">ただいま画像閲覧中につき、ライブ映像の受信を\n 中断しております。再開まで暫くお待ちください。</string>
    <string name="camera2_texture_only_error">Camera2 only supports capturing to texture. Either disable Camera2 or enable capturing to texture in the options.</string>
    <string name="channel_error_title">Connection error</string>
    <string name="connect_activity_txt_title">通信先を選択してください。</string>
    <string name="connect_activity_txt_emergency1">Emergency Call</string>
    <string name="connect_activity_txt_emergency2">ロングタップで緊急通知送信</string>
    <string name="connect_activity_btn_p2p">P2P通話</string>
    <string name="connect_activity_btn_logout">ログアウト</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="dialog_receive_image_btn_cancel">キャンセル</string>
    <string name="dialog_receive_image_btn_open">開く</string>
    <string name="dialog_receive_image_txt_content">画像を受信しました。確認しますか？\n後でギャラリーにて確認する事も出来ます。</string>
    <string name="dialog_receive_image_txt_title">お知らせ</string>
    <string name="draw_picture_activity_btn_close">閉じる</string>
    <string name="draw_picture_activity_btn_send_image">画像送信</string>
    <string name="draw_picture_activity_btn_undo">ひとつ戻る</string>
    <string name="draw_picture_activity_txt_title_color">閉じる</string>
    <string name="draw_picture_activity_txt_title_line">線種選択</string>
    <string name="error_capture">Capture fail, please change resolution and try again</string>
    <string name="error_connect_internet">Error connect internet</string>
    <string name="error_connect_server">サーバとの接続に失敗し、ログイン処理が正常に完了しませんでした。少し間を置いてから、再度ログインをお試し頂けますでしょうか。</string>
    <string name="format_description">%1$dx%2$d @ %3$d fps</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="muted">Muted</string>
    <string name="connect_activity_txt_no_contact">No contact is online</string>
    <string name="ok">OK</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_built_in_aec_not_available">Hardware AEC is not available</string>
    <string name="pref_built_in_agc_not_available">Hardware AGC is not available</string>
    <string name="pref_built_in_ns_not_available">Hardware NS is not available</string>
    <string name="pref_camera2_default">true</string>
    <string name="pref_camera2_key">camera2_preference</string>
    <string name="pref_camera2_not_supported">Not supported on this device.</string>
    <string name="pref_camera2_title">Use Camera2.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturetotexture_default">true</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_data_id_default">-1</string>
    <string name="pref_data_id_dlg">Enter data channel id.</string>
    <string name="pref_data_id_key">data_id_preference</string>
    <string name="pref_data_id_title">Data id.</string>
    <string name="pref_data_protocol_default" />
    <string name="pref_data_protocol_dlg">Enter subprotocol.</string>
    <string name="pref_data_protocol_key">Subprotocol</string>
    <string name="pref_data_protocol_title">Subprotocol.</string>
    <string name="pref_datasettings_key">data_settings_key</string>
    <string name="pref_datasettings_title">WebRTC data channel settings.</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_disable_built_in_aec_dlg">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_title">Disable hardware AEC.</string>
    <string name="pref_disable_built_in_agc_default">false</string>
    <string name="pref_disable_built_in_agc_dlg">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_agc_key">disable_built_in_agc_preference</string>
    <string name="pref_disable_built_in_agc_title">Disable hardware AGC.</string>
    <string name="pref_disable_built_in_ns_default">false</string>
    <string name="pref_disable_built_in_ns_dlg">Disable hardware NS.</string>
    <string name="pref_disable_built_in_ns_key">disable_built_in_ns_preference</string>
    <string name="pref_disable_built_in_ns_title">Disable hardware NS.</string>
    <string name="pref_disable_webrtc_agc_and_hpf_key">disable_webrtc_agc_and_hpf_preference</string>
    <string name="pref_disable_webrtc_agc_and_hpf_title">Disable WebRTC AGC and HPF.</string>
    <string name="pref_disable_webrtc_agc_default">false</string>
    <string name="pref_displayhud_default">false</string>
    <string name="pref_displayhud_dlg">Display call statistics.</string>
    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Display call statistics.</string>
    <string name="pref_enable_datachannel_default">true</string>
    <string name="pref_enable_datachannel_key">enable_datachannel_preference</string>
    <string name="pref_enable_datachannel_title">Enable datachannel.</string>
    <string name="pref_enable_level_control_default">false</string>
    <string name="pref_enable_level_control_key">enable_level_control_preference</string>
    <string name="pref_enable_level_control_title">Enable level control.</string>
    <string name="pref_flexfec_default">false</string>
    <string name="pref_flexfec_dlg">Enable FlexFEC.</string>
    <string name="pref_flexfec_key">flexfec_preference</string>
    <string name="pref_flexfec_title">Codec-agnostic Flexible FEC.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_max_retransmit_time_ms_default">-1</string>
    <string name="pref_max_retransmit_time_ms_dlg">Enter max delay to retransmit (in ms).</string>
    <string name="pref_max_retransmit_time_ms_key">max_retransmit_time_ms_preference</string>
    <string name="pref_max_retransmit_time_ms_title">Max delay to retransmit.</string>
    <string name="pref_max_retransmits_default">-1</string>
    <string name="pref_max_retransmits_dlg">Enter max attempts to retransmit.</string>
    <string name="pref_max_retransmits_key">max_retransmits_preference</string>
    <string name="pref_max_retransmits_title">Max attempts to retransmit.</string>
    <string name="pref_maxvideobitrate_default">Manual</string>
    <string name="pref_maxvideobitrate_dlg">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitrate_key">maxvideobitrate_preference</string>
    <string name="pref_maxvideobitrate_title">Maximum video bitrate setting.</string>
    <string name="pref_maxvideobitratevalue_default">1200</string>
    <string name="pref_maxvideobitratevalue_dlg">Enter video encoder maximum bitrate in kbps.</string>
    <string name="pref_maxvideobitratevalue_key">maxvideobitratevalue_preference</string>
    <string name="pref_maxvideobitratevalue_title">Video encoder maximum bitrate.</string>
    <string name="pref_miscsettings_key">misc_settings_key</string>
    <string name="pref_miscsettings_title">Miscellaneous settings.</string>
    <string name="pref_negotiated_default">false</string>
    <string name="pref_negotiated_key">negotiated_preference</string>
    <string name="pref_negotiated_title">Negotiated.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_ordered_default">true</string>
    <string name="pref_ordered_key">ordered_preference</string>
    <string name="pref_ordered_title">Order messages.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_server_url_default">https://appr.tc</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_screencapture_default">false</string>
    <string name="pref_screencapture_key">screencapture_preference</string>
    <string name="pref_screencapture_title">Use screencapture.</string>
    <string name="pref_speakerphone_default">auto</string>
    <string name="pref_speakerphone_dlg">Speakerphone.</string>
    <string name="pref_speakerphone_key">speakerphone_preference</string>
    <string name="splash_activity_txt1">インフラ通信システム\n(Ai-TEC)</string>
    <string name="splash_activity_txt2">Ver.1.10 (2018)</string>
    <string name="splash_activity_txt3">Ai-MAP SYSTEM \nPowered by ASANUMA Corp. &amp; Mio System Co.,Ltd</string>
    <string name="login_activity_txt_user">ユーザーID</string>
    <string name="login_activity_txt_pass">パスワード</string>
    <string name="login_activity_btn_login">ログイン</string>
    <string name="answer">受話</string>
    <string name="conference">複数人通話</string>
    <string name="oneTec">ひとりTEC</string>
    <string name="join_a_conference_message">から複数人通話リクエストが届きました。</string>
    <string name="deny_call">キャンセル</string>
    <string name="notice">お知らせ</string>
    <string name="connection_error_establish">サーバーへの接続に失敗しました。ネットワーク接続が不安定な可能性があります。周辺の電波状況を確認の後、再度お試しください。</string>
</resources>