<?xml version="1.0" encoding="utf-8"?>
<!--[20170912] Ductx: #2594: Create layout for received image confirmation screen-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/dialog_ly_main_padding">

    <TextView
        style="@style/text_content"
        android:text="@string/dialog_receive_image_txt_title"
        android:textColor="@color/black"/>

    <jp.co.miosys.aitec.views.widgets.DrawViewOneLine
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/dialog_line_mar_bot"
        android:layout_marginTop="@dimen/dialog_line_mar_top"
        android:background="@color/gray_200"/>

    <TextView
        style="@style/text_content"
        android:layout_gravity="center"
        android:text="@string/dialog_receive_image_txt_content"
        android:textColor="@color/black"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_open"
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_margin="@dimen/dialog_btn_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_capture"
            android:backgroundTint="@color/blue_400"
            android:text="@string/dialog_receive_image_btn_open"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/btn_cancel"
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_height="@dimen/dialog_btn_height"
            android:layout_margin="@dimen/dialog_btn_margin"
            android:layout_weight="1"
            android:background="@drawable/btn_capture"
            android:text="@string/dialog_receive_image_btn_cancel"
            android:textColor="@color/white"/>
    </TableRow>
</LinearLayout>
