<?xml version="1.0" encoding="utf-8"?>
<!--[20170830] Ductx: #2584: Create layout for connect activity -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ly_connect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:orientation="vertical">

    <TextView
        android:id="@+id/txt_title"
        style="@style/text_title"
        android:layout_marginLeft="@dimen/connect_ly_main_margin"
        android:layout_marginTop="@dimen/connect_txt_title_mar_top"
        android:gravity="center"
        android:text="@string/connect_activity_txt_title"/>

    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/connect_ly_main_margin"
        android:layout_marginTop="@dimen/connect_txt_title_mar_top"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_menu" />

    <TableRow
        android:id="@+id/ly_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginBottom="@dimen/connect_txt_title_margin"
        android:layout_marginLeft="@dimen/connect_ly_main_margin"
        android:layout_marginTop="@dimen/connect_txt_title_margin">

        <FrameLayout
            android:layout_width="@dimen/connect_imv_user_size"
            android:layout_height="@dimen/connect_imv_user_size">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circle"/>

            <ImageView
                android:layout_width="@dimen/connect_imv_online_size"
                android:layout_height="@dimen/connect_imv_online_size"
                android:layout_gravity="bottom|right"
                android:background="@drawable/circle"
                android:backgroundTint="@color/green_200"/>
        </FrameLayout>

        <TextView
            android:id="@+id/txt_user"
            style="@style/text_content"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="Mio"/>
    </TableRow>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ly_user"
        android:layout_marginBottom="@dimen/connect_ly_main_mar_bot"
        android:layout_marginLeft="@dimen/connect_ly_main_margin"
        android:layout_marginRight="@dimen/connect_ly_main_margin"
        android:background="@color/white">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawSelectorOnTop="false"
            android:scrollbars="vertical"/>

        <TextView
            style="@style/text_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/connect_activity_txt_no_contact"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/ly_emergency"
        android:layout_width="match_parent"
        android:layout_height="@dimen/connect_txt_emergency_height"
        android:layout_above="@+id/ly_footer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="9dp"
        android:background="@color/red_600"
        android:orientation="vertical">

        <TextView
            style="@style/text_content"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/connect_activity_txt_emergency1"
            android:textSize="@dimen/connect_txt_emergency_title_size"
            android:textStyle="normal"/>

        <TextView
            style="@style/text_content"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/connect_activity_txt_emergency2"
            android:textSize="@dimen/connect_txt_emergency_content_size"/>
    </LinearLayout>

    <TableRow
        android:id="@+id/ly_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/connect_btn_margin"
        android:gravity="center">

        <Button
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/connect_btn_height"
            android:layout_margin="@dimen/connect_btn_margin"
            android:background="@drawable/btn_capture"
            android:onClick="logOutOnclick"
            android:text="@string/connect_activity_btn_logout"/>
        <Button
            android:id="@+id/btn_p2p"
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/connect_btn_height"
            android:layout_margin="@dimen/connect_btn_margin"
            android:background="@drawable/btn_capture"
            android:backgroundTint="@color/green_600"
            android:visibility="gone"
            android:onClick="connectOnclick"
            android:text="@string/connect_activity_btn_p2p"/>
        <Button
            android:id="@+id/btn_one_tec"
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/connect_btn_height"
            android:layout_margin="@dimen/connect_btn_margin"
            android:background="@drawable/btn_capture"
            android:backgroundTint="@color/green_600"
            android:visibility="visible"
            android:onClick="oneTecOnclick"
            android:text="@string/oneTec"/>
        <Button
            android:id="@+id/btn_conference"
            style="@style/text_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/connect_btn_height"
            android:layout_margin="@dimen/connect_btn_margin"
            android:background="@drawable/btn_capture"
            android:backgroundTint="@color/green_600"
            android:visibility="visible"
            android:onClick="conferenceOnclick"
            android:text="@string/conference"/>
    </TableRow>
</RelativeLayout>
