<?xml version="1.0" encoding="utf-8"?>
<!--[20170910] Ductx: #2663: Create layout for splash activity-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/ly_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/text_title"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/splash_txt_title_mar_bot"
            android:gravity="center_horizontal"
            android:text="@string/splash_activity_txt1"
            android:textSize="@dimen/splash_txt_title_size"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/app_version"
            style="@style/text_title"
            android:visibility="gone"
            android:text="@string/splash_activity_txt2"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_company"
        style="@style/text_content"
        android:layout_above="@+id/layout_logos"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/splash_txt_content_margin"
        android:gravity="left"
        android:text="@string/splash_activity_txt3"
        android:textColor="@color/colorPrimary"/>

    <ImageView
        android:id="@+id/layout_logos"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/splash_imv_logo_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/splash_imv_logo_mar_bot"
        android:layout_weight="2"
        android:src="@mipmap/logo"/>

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_above="@+id/txt_company"/>
</RelativeLayout>
